# Microservice_Fundamentals

./: .gitignore  README.md  compose.yml  database.db  main.py  pyproject.toml
services/inventory-service/: Dockerfile  main.py  pyproject.toml
services/order-service/: Dockerfile  main.py  pyproject.toml
services/product_service/: Dockerfile  main.py  product_pb2.py  product_pb2_grpc.py  pyproject.toml
services/user-service/: Dockerfile  db.py  main.py  models.py  pyproject.toml
services/user_service/: Dockerfile  auth.py  config.py  main.py  pyproject.toml  routes.py
shared/: jwt_utils.py
