[project]
name = "microservice-fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.138.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.13.0",
]

[tool.uv.workspace]
members = [
    "services/user_service",
    "services/order_service",
    "services/product_service",
]
