[project]
name = "user-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.138.0",
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-exporter-otlp>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-sdk>=1.43.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlmodel>=0.0.38",
]
